[package]
name = "from_file"
version = "0.1.3"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
description = "A simple convenience to deserialize a rust Struct or Enum directly from a json or yaml file path."
repository = "https://github.com/shakyShane/from_file"
keywords = ["serde", "derive", "file"]
license = "MIT"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = {version = "0.9.21", optional = true }
serde_json = {version =  "1.0", optional = true }
quick-xml = { version = "0.29.0", features = ["serialize"], optional = true }

[dev-dependencies]
from_file_derive = { path = "../from_file_derive", version = "0.1.3", features = ["yaml", "json", "xml"] }

[badges]
travis-ci = { repository = "shakyShane/from_file", branch = "master" }

[features]
yaml = ["dep:serde_yaml"]
json = ["dep:serde_json"]
xml = ["dep:quick-xml"]
